<resources>
    <string name="open_navigation">Open navigation drawer</string>
    <string name="close_navigation">Close navigation drawer</string>
    <string name="app_name">健康馆</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="login">登录</string>
    <string name="nickname">昵称</string>
    <string name="exitlogin">退出登录</string>
    <string name="wealther_load">天气加载中...</string>
    <string name="set">设置</string>
    <string name="more">更多</string>
    <string name="usercenter">个人资料</string>
    <string name="givemeny">鼓励捐赠</string>
    <string name="about">关于</string>
    <string name="hint">提示</string>
    <string name="reg">注册</string>
    <string name="reg_desc">　　你好，欢迎您使用本软件，为了能有更好的用户体验，我们建议您注册一个您容易记住的账号。</string>
    <string name="email">邮箱</string>
    <string name="acount">账号</string>
    <string name="password">密码</string>
    <string name="password2">重复密码</string>
    <string name="sex">性别</string>
    <string name="boy">男</string>
    <string name="gril">女</string>
    <string name="keep">保密</string>
    <string name="checkcode">验证码</string>


    <string name="icon">icon</string>
    <string name="life">生活</string>
    <string name="defultnickname">立即登录</string>
    <string name="vip">vip</string>
    <string name="lv_1">lv.1</string>
    <string name="user">用户</string>
    <string name="tool">工具</string>
    <string name="other">其它</string>
    <string name="emailhint">请填写Email</string>
    <string name="acounthint">请输入账号</string>
    <string name="pwdhint">请输入密码</string>
    <string name="pwd2hint">请重复输入密码</string>
    <string name="checkcodehint">请输入验证码</string>
    <string name="checkcode2">验证码有误</string>
    <string name="reg_width_thrid">其他注册方式</string>
    <string name="accounthint">账户/邮箱</string>
    <string name="forgetpwd"><u>忘记密码？</u></string>
    <string name="noaccount"><u>没有账号？立即注册</u></string>
    <string name="login_width_thrid">其它登录方式</string>
    <string name="login_error">登录失败</string>
    <string name="logining">登录中...</string>
    <string name="reging">注册中...</string>
    <string name="head">头像</string>
    <string name="userfriend">我的好友</string>
    <string name="userlike">我的收藏</string>
    <string name="healthy_lore">健康知识</string>
    <string name="health_knowledge">Health knowledge</string>
    <string name="button">button</string>
    <string name="long_desc">\t\t首先，非常感谢您下载并打开本软件，本软件的开发宗旨在(为医疗界的人士们提供一个交流互动的平台)，在这里，你可以浏览到最新的医疗新闻和生活中相关的资料信息，你也可以找到和你兴趣相当的朋友，甚至和他们交流.一切的一切，都只为了让一位从事医疗相关工作的(或者其他工作)人们有一个属于自己的交流平台。但是，<b>这一切得以正常运行，是因为天狗(tngou.net)服务器为我们默默的做着奉献。</b>天狗云是一个免费提供数据接口的平台，我们的数据来自社区，所以也把相应的数据回馈给社区。如果你觉得我们的数据对你有帮助，同时你也想支持我们数据免费开放，不妨可以对我们施舍点！</string>
    <string name="long_desc2">\t\t如果你对本软件有任何评价，欢迎到商店去评论。我们会第一时间纠正错误。</string>
</resources>
