<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_group_user"
        android:title="@string/user">
        <menu>
            <group android:checkableBehavior="single">
                <item

                    android:id="@+id/menu_usercenter"
                    android:icon="@mipmap/yonghu"
                    android:title="@string/usercenter" />
                <item

                    android:id="@+id/menu_userfriend"
                    android:icon="@mipmap/friend"
                    android:title="@string/userfriend" />
                <item

                    android:id="@+id/menu_userlike"
                    android:icon="@mipmap/like"
                    android:title="@string/userlike" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_group_tool"
        android:title="@string/tool">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_set"
                    android:icon="@mipmap/shezhi"
                    android:title="@string/set" />

                <item
                    android:id="@+id/menu_givemeny"
                    android:icon="@mipmap/guli"
                    android:title="@string/givemeny" />

                <item
                    android:id="@+id/menu_about"
                    android:icon="@mipmap/guanyu"
                    android:title="@string/about" />

                <item
                    android:id="@+id/menu_hint"
                    android:icon="@mipmap/tishi"
                    android:title="@string/hint" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/menu_group_other"
        android:title="@string/other">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/menu_exit"
                    android:icon="@mipmap/tuichu"
                    android:title="@string/exit" />
            </group>
        </menu>
    </item>
</menu>