<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    tools:context="android.microanswer.healthy.LoginActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/activity_login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:theme="@style/mDrawerArrowToggle"
        android:background="@color/colorPrimary"
        android:elevation="6dip"
        android:title="@string/login"
        app:titleTextColor="@color/whilte">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_login_toolbar"
        android:background="@color/whilte">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="?android:attr/actionBarSize"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dip"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dip"
                android:layout_marginBottom="8dip"
                android:elevation="8dip"
                android:background="@drawable/edittext_bg"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="?android:attr/actionBarSize"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="\@"
                        android:textColor="#55d"
                        android:textSize="23sp" />

                    <EditText
                        android:id="@+id/activity_login_edittext_acount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:contentDescription="邮箱或者账号"
                        android:gravity="center_vertical"
                        android:hint="@string/accounthint"
                        android:inputType="textCapWords"
                        android:maxLength="20"
                        android:maxLines="1"
                        android:padding="11dip"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dip"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip">

                    <ImageView
                        android:layout_width="?android:attr/actionBarSize"
                        android:layout_height="match_parent"
                        android:padding="10dip"
                        android:src="@mipmap/key" />

                    <EditText
                        android:id="@+id/activity_login_edittext_password1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:contentDescription="输入你的密码"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLength="16"
                        android:maxLines="1"
                        android:padding="11dip"
                        android:textSize="15sp" />

                    <CheckBox
                        android:id="@+id/activity_login_checkbox_seepwd"
                        android:layout_width="45dip"
                        android:layout_height="40dip"
                        android:background="@drawable/pwdstate"
                        android:button="@null"
                        android:gravity="center"
                        android:text="@null" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/activity_login_textview_noaccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dip"
                    android:padding="5dip"
                    android:text="@string/noaccount"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/activity_login_textview_forgotpwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/forgetpwd"
                    android:textColor="@color/colorPrimary" />

            </LinearLayout>

            <Button
                android:id="@+id/activity_login_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dip"
                android:background="@drawable/defulat_click_bg"
                android:text="@string/login"
                android:textColor="@color/whilte" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dip"
                android:layout_marginRight="20dip"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dip"
                    android:layout_weight="1"
                    android:background="@color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_width_thrid" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dip"
                    android:layout_weight="1"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_login_qq"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:src="@mipmap/qq" />

                <ImageView
                    android:id="@+id/activity_login_sina"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_marginLeft="20dip"
                    android:src="@mipmap/sina" />

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>
